// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling
     
    $1,141.95
  </h3>
</div>
`;

exports[`should correctly render expenses summary with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling
     
    $1.95
  </h3>
</div>
`;
